# RMCV_Engineer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  README.md  main.cpp  test.py
args/: CMakeLists.txt
args/include/: args.hpp  matrix_utils.hpp
args/src/: args.cpp
calculate/: CMakeLists.txt
calculate/include/: calculate.hpp  matrix_utils.hpp
calculate/src/: calculate.cpp
com/: CMakeLists.txt  bridge.hpp  readme.md  test_mcu_send.txt
com/include/: bridge.h  data_manager.h  datatypes.h  rmcan.h  rmserial.h
com/include/serial/: serial.h
com/include/serial/impl/: unix.h  win.h
com/src/: bridge.cpp  data_manager.cpp  datatypes.cpp  rmcan.cpp  rmserial.cpp  serial.cpp
com/src/impl/: unix.cpp
com/src/impl/list_ports/: list_ports_linux.cpp
config/: CMakeLists.txt  config.toml  local-config.default.toml  local-config.toml
config/constants/: airforce.toml  balanced_2.toml  ballistic_table.toml  constants.default.toml  db1.toml  db2.toml  engineer.toml  engineer_arm.toml  hero.toml  mai1.toml  mai2.toml
data/: CMakeLists.txt
data/include/: data.hpp
data/src/: data.cpp
detect/: CMakeLists.txt  CMakeLists.txt.old
detect/include/: basedetector.hpp  detector.hpp  detectormanager.hpp  minedetector.hpp  minenetdetector.hpp  sitedetector.hpp  sitedetectorpro.hpp
detect/src/: basedetector.cpp  detector.cpp  detector.cpp.old  detectormanager.cpp  find.cpp  minedetector.cpp  minenetdetector.cpp  minenetdetector.cpp.bak  sitedetector.cpp  sitedetectorpro.cpp
models/armor/: armor.xml  armor.yaml
models/armor_09/: armor.xml
models/armor_bak/: armor.pt  armor.xml  armor.yaml  best.onnx  last.pt
sensor/: CMakeLists.txt
sensor.new/: CMakeLists.txt
sensor.new/include/: parameter.h  rmconfig.h  sensor.hpp  uvc_v4l2.h
sensor.new/src/: sensor.cpp  uvc_v4l2.cpp
sensor/include/: BaseCap.hpp  UVC.hpp  basecap.hpp  camera.h  sensor.hpp  uvc_v4l2.h  video.hpp
sensor/src/: UVC.cpp  sensor.cpp  uvc.cpp  uvc_v4l2.cpp  video.cpp
tools/: CMakeLists.txt  camparam.cpp
utils/: CMakeLists.txt
utils/log/: CMakeLists.txt
utils/log/include/: log.hpp
utils/log/src/: log.cpp
utils/perf/: CMakeLists.txt
utils/perf/include/: perf.hpp
utils/perf/src/: perf.cpp
utils/thread_butcher/: CMakeLists.txt
utils/thread_butcher/include/: thread_butcher.hpp
utils/thread_butcher/src/: thread_butcher.cpp
utils/umt/: CMakeLists.txt
utils/umt/include/: message.hpp  object_manager.hpp  umt.hpp
utils/watchdog/: CMakeLists.txt
utils/watchdog/include/: persistent_counter.hpp  watchdog.hpp
